the browser somewhat reacts to the proper color being displayed

--- a/hw04/ServerLED/matrixLED.css
+++ b/hw04/ServerLED/matrixLED.css
@@ -35,6 +35,18 @@ body {
 
 }
 
+.onred {
+	border: 1px solid #00ee00;
+	background-color: red;
+
+}
+
+.onorange {
+	border: 1px solid #00ee00;
+	background-color: orange;
+
+}
+
 #i2cNum {
 	text-align: right; 
 	width:	3em;
